--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Github Repository에 올린 파일들을 불러오기
         uses: actions/checkout@v4
 
+      - name: Test
+        run: |
+          ls
+          pwd
+
       - name: JDK 17버전 설치
         uses: actions/setup-java@v4
         with:
@@ -29,29 +34,22 @@ jobs:
       - name: 빌드된 파일 이름 변경하기
         run: mv ./build/libs/*SNAPSHOT.jar ./project.jar
 
-      - name: SCP로 EC2에 빌드된 파일 전송하기
-        uses: appleboy/scp-action@v0.1.7
+      - name: 압축하기
+        run: tar -czvf $GITHUB_SHA.tar.gz project.jar appspec.yml scripts
+
+      - name: AWS Resource에 접근할 수 있게 AWS credentials 설정
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: project.jar
-          target: /home/ubuntu/instagram-server2/tobe
+          aws-region: ap-northeast-2
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+      - name: S3에 프로젝트 폴더 업로드하기
+        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.tar.gz s3://instagram-server123123/$GITHUB_SHA.tar.gz
 
-      - name: SSH(원격 접속)로 EC2에 접속하기
-        uses: appleboy/ssh-action@v1.0.3
-
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          script_stop: true
-          script: |
-            rm -rf /home/ubuntu/instagram-server2/current
-            mkdir /home/ubuntu/instagram-server2/current
-            mv /home/ubuntu/instagram-server2/tobe/project.jar /home/ubuntu/instagram-server2/current/project.jar
-            cd /home/ubuntu/instagram-server2/current
-            sudo fuser -k -n tcp 8080 || true
-            nohup java -jar project.jar >./output.log 2>&1 &
-            rm -rf /home/ubuntu/instagram-server2/tobe
+      - name: Code Deploy를 활용해 EC2에 프로젝트 코드 배포
+        run: aws deploy create-deployment
+            --application-name instagram-server2
+            --deployment-config-name CodeDeployDefault.AllAtOnce
+            --deployment-group-name Production
+            --s3-location bucket=instagram-server123123,bundleType=tgz,key=$GITHUB_SHA.tar.gz
