--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,5 +51,5 @@ jobs:
         run: aws deploy create-deployment
             --application-name instagram-server2
             --deployment-config-name CodeDeployDefault.AllAtOnce
-            --deployment-group-name Production
+            --deployment-group-name production
             --s3-location bucket=instagram-server123123,bundleType=tgz,key=$GITHUB_SHA.tar.gz
