--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,16 +6,11 @@ on:
       - main
 
 jobs:
-  Deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Github Repository에 올린 파일들을 불러오기
+      - name: Github Repository 파일 불러오기
         uses: actions/checkout@v4
-
-      - name: Test
-        run: |
-          ls
-          pwd
 
       - name: JDK 17버전 설치
         uses: actions/setup-java@v4
@@ -31,12 +26,6 @@ jobs:
           chmod +x ./gradlew
           ./gradlew clean build
 
-      - name: 빌드된 파일 이름 변경하기
-        run: mv ./build/libs/*SNAPSHOT.jar ./project.jar
-
-      - name: 압축하기
-        run: tar -czvf $GITHUB_SHA.tar.gz project.jar appspec.yml scripts
-
       - name: AWS Resource에 접근할 수 있게 AWS credentials 설정
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -44,12 +33,28 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: S3에 프로젝트 폴더 업로드하기
-        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.tar.gz s3://instagram-server123123/$GITHUB_SHA.tar.gz
+      - name: ECR에 로그인하기
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Code Deploy를 활용해 EC2에 프로젝트 코드 배포
-        run: aws deploy create-deployment
-            --application-name instagram-server2
-            --deployment-config-name CodeDeployDefault.AllAtOnce
-            --deployment-group-name production
-            --s3-location bucket=instagram-server123123,bundleType=tgz,key=$GITHUB_SHA.tar.gz
+      - name: Docker 이미지 생성
+        run: docker build -t instagram-server2 .
+
+      - name: Docker 이미지에 Tag 붙이기
+        run: docker tag instagram-server2 ${{ steps.login-ecr.outputs.registry }}/instagram-server2:latest
+
+      - name: ECR에 Docker 이미지 Push하기
+        run: docker push ${{ steps.login-ecr.outputs.registry }}/instagram-server2:latest
+
+      - name: SSH로 EC2에 접속하기
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_PRIVATE_KEY }}
+          script_stop: true
+          script: |
+            docker stop instagram-server2 || true
+            docker rm instagram-server2 || true
+            docker pull ${{ steps.login-ecr.outputs.registry }}/instagram-server2:latest
+            docker run -d --name instagram-server2 -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/instagram-server2:latest
